todo
- komodo/caiman damper: fire projectiles at end of cycle, not during
- steal tilt's dash AI
- fix up travel drive deactivation range (maybe other AI improvements?)



========
New:
- Toroid Mortar: Fires a slow-moving explosive ring of plasma. The projectile arcs to nearby targets while in flight, and explodes instead of dissipating at the end of its range. Good burst damage, hit strength, and range, but very low sustained DPS.
- New SFX for Tachyon Inverter, QGPD, and QG Pulsers.

Changes:
- Sunbeam: Increased DP (50 -> 55), reduced nozzle cooldown penalty (25% -> 15%). Fixed a mount that was pointed in the wrong direction. Significantly reduced the ship system's performance impact. Enabling potato mode in the settings will now disable the system's indicator ring.
- Networked Targeting Array: Now caps fighter weapon range at 2000 units to avoid issues with support fighters and bombers with very large base weapon ranges.
- Chameleon Wing: Removed Advanced Targeting Core and doubled weapon base range so it can benefit properly from Networked Targeting Array. Also added Nanolaminate Plating, since it was missing it.
- Tachyon Inverter: Reduced magazine size to 3 shots. 
- Excession: Reworked [redacted], now actually looks at the enemy faction.
- Tachyon Driver: Increased OP cost (11 -> 12). Small version is unchanged.
- Thunderstorm SLRM Missiles: Reworked mine explosion effects; sunglasses no longer required.
- Added Exiled Space config. 
- Cryocoolant projector: Autotargeting will now try to fire one projectile at the highest-flux ship and spread remaining projectiles over other nearby ships. The effect now says +X% dissipation instead of -X% (just a display error; it was working correctly).

NEEDS SPRITIN':
- Anaconda-class phase battlecruiser.
	- cryocooled armor
	- limited magazines
	- System: Temporal Siphon. Steals 20% of the timeflow from each hostile ship within range. 
	- Armament: 6x medium uni, 1x large uni, 4x small uni.