@@ -33,9 +33,9 @@
 					"canSplitEarly":true,
 					"splitSound":"hurricane_mirv_fire",
 					"numShots":10,
-					"damage":125,
+					"damage":110,
 					"impact":5,
-					"emp":200,
+					"emp":175,
 					"damageType":KINETIC,
 					"hitpoints":250,
 					"arc":180,
