@@ -15,12 +15,12 @@ Taipan VLS-15E,apex_vls_right_tachyon,,,,2000,,100,400,,,,30,0.75,15,ENERGY,0,0,
 thorn proj,apex_thorn_wpn,,,,800,,200,400,,,,,,,ENERGY,0,0,0,1,1,0,0,0,0,0,,600,100,5,500,,,SYSTEM,,,,,,,,,,,,,,,
 Tachyon Shredder,apex_tachyonshredder,,,,700,,200,200,,,,,,,ENERGY,180,,,0.3333,,,0,4,1,2,,1000,,,,,,"SYSTEM, DANGEROUS",,,Apex Design Collective,,General,,,,,Damage increases by up to %s with flux level. Higher flux levels produce explosions that deal %s of the projectile's damage as %s damage.,100% | 50% | fragmentation,,,,1
 Ultrachromatic Pulse Cannon,apex_ultrachrome,,,,1000,,1000,,,,,4,0.125,,ENERGY,750,,,1,,,0,9,4.5,4.5,,600,,,,,,"SYSTEM, STRIKE, USE_VS_FRIGATES",,,Apex Design Collective,,Siege,,,,,"Shield hits against stations and multi-section ships increase the hard flux of all attached sections by %s, or %s of their maximum flux capacity, whichever is lower.",1000 | 5%,,,,1
-frag_mine,apex_thundercloud_mine_frag,,,,9999,,600,,,,,,,,FRAGMENTATION,0,,,1,,,,,,,,60,20,15,200,,,SYSTEM,,,,,,,,,,,,,,,
-emp_mine,apex_thundercloud_mine_emp,,,,9999,,250,,,,,,,,KINETIC,0,,,1,,,,,,,,60,20,15,200,,,SYSTEM,,,,,,,,,,,,,,,
-he_mine,apex_thundercloud_mine_he,,,,9999,,249,,,,,,,,HIGH_EXPLOSIVE,0,,,1,,,,,,,,60,20,15,200,,,SYSTEM,,,,,,,,,,,,,,,
-Thunderstorm SLRM-D,apex_thundercloud_frag,,,,10000,,5000,,,,,5,0.033333,1,FRAGMENTATION,,,,15,1,,,,,,,400,100,40,450,,,"SYSTEM, DO_NOT_AIM, DO_NOT_CONSERVE","no_drop, no_salvage",,Apex Design Collective,,Long Range Support,Fast,Medium,,,"%s: Shield hits increase the target's hard flux by %s. Armor hits remove an additional %s armor, ignoring armor damage reduction.",Disruption Mines | 100 | 50,,,,1
-Thunderstorm SLRM-H,apex_thundercloud_he,,,,10000,,2500,,,,,5,0.033333,1,HIGH_EXPLOSIVE,,,,15,1,,,,,,,400,100,40,450,,,"SYSTEM, DO_NOT_AIM, DO_NOT_CONSERVE","no_drop, no_salvage",,Apex Design Collective,,Long Range Support,Fast,Medium,,,"%s: Each mine that hits hull or armor increases hull and armor damage taken from other harmonized projectiles by %s for %s seconds, up to a maximum of %s.",Harmonizing Mines | 8% | 5 | 100%,,,,1
-Thunderstorm SLRM-E,apex_thundercloud_emp,,,,10000,,2500,,,,,5,0.033333,1,KINETIC,,,,15,1,,,,,,,400,100,40,450,,,"SYSTEM, DO_NOT_AIM, DO_NOT_CONSERVE","no_drop, no_salvage",,Apex Design Collective,,Long Range Support,Fast,Medium,,,%s: Shield hits increase the target's hard flux by %s. Armor and hull hits increase the target's soft flux by %s.,Graviton Mines | 100 | 100,,,,1
+frag_mine,apex_thundercloud_mine_frag,,,,9999,,500,,,,,,,,FRAGMENTATION,0,,,1,,,,,,,,30,20,10,200,,,SYSTEM,,,,,,,,,,,,,,,
+emp_mine,apex_thundercloud_mine_emp,,,,9999,,250,,,,,,,,KINETIC,0,,,1,,,,,,,,30,20,10,200,,,SYSTEM,,,,,,,,,,,,,,,
+he_mine,apex_thundercloud_mine_he,,,,9999,,249,,,,,,,,HIGH_EXPLOSIVE,0,,,1,,,,,,,,30,20,10,200,,,SYSTEM,,,,,,,,,,,,,,,
+Thunderstorm SLRM-D,apex_thundercloud_frag,,,,10000,,5000,,,,,5,0.033333,1,FRAGMENTATION,,,,15,1,,,,,,,400,100,40,400,,,"SYSTEM, DO_NOT_AIM, DO_NOT_CONSERVE","no_drop, no_salvage",,Apex Design Collective,,Long Range Support,Fast,Medium,,,"%s: Armor hits remove an additional %s armor, ignoring armor damage reduction.",Disruption Mines | 25,,,,1
+Thunderstorm SLRM-H,apex_thundercloud_he,,,,10000,,2500,,,,,5,0.033333,1,HIGH_EXPLOSIVE,,,,15,1,,,,,,,400,100,40,400,,,"SYSTEM, DO_NOT_AIM, DO_NOT_CONSERVE","no_drop, no_salvage",,Apex Design Collective,,Long Range Support,Fast,Medium,,,"%s: Each mine that hits hull or armor increases hull and armor damage taken from other harmonized projectiles by %s for %s seconds, up to a maximum of %s.",Harmonizing Mines | 8% | 5 | 100%,,,,1
+Thunderstorm SLRM-E,apex_thundercloud_emp,,,,10000,,2500,,,,,5,0.033333,1,KINETIC,,,,15,1,,,,,,,400,100,40,400,,,"SYSTEM, DO_NOT_AIM, DO_NOT_CONSERVE","no_drop, no_salvage",,Apex Design Collective,,Long Range Support,Fast,Medium,,,%s: Shield hits increase the target's hard flux by %s. Armor and hull hits increase the target's soft flux by %s.,Graviton Mines | 100 | 100,,,,1
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 # FIGHTER GUNS,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
@@ -66,18 +66,18 @@ Haymarket Railcannon,apex_haymarket,3,,5000,900,,400,200,10,10,25,,,,KINETIC,500
 Harmonic Dart Cannon,apex_dartgun,2,,5000,900,,250,,10,10,25,,,,HIGH_EXPLOSIVE,325,,,2.25,4,0.25,0,8,2,8,,800,,,,,,,"he15, rare_bp",,Apex Design Collective,,Anti Armor,,,,,"%s: Each dart that hits hull or armor increases hull and armor damage taken from other harmonized projectiles by %s for %s seconds, up to a maximum of %s.",Harmonized | 8% | 5 | 100%,,,,1
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 # MISSILE SMOL,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-Arcspike SRM Pod,apex_arcspike,1,0.5,800,1200,,125,200,10,30,4,20,,,KINETIC,,,,8,5,0.05,10,10,0,0,,700,50,2.5,225,,,"GUIDED_POOR, STRIKE, USE_VS_FRIGATES","kinetic6, apex_weapons",,Apex Design Collective,,Anti Shield,Very Fast,Good,,,"Shield hits increase hard flux by %s. Hull or armor hits have a %s chance to arc to weapons or engines, dealing %s EMP damage.",75 | 25% | 250,,,TRUE,1
+Arcspike SRM Pod,apex_arcspike,1,0.5,800,1200,,110,175,10,30,4,20,,,KINETIC,,,,8,5,0.05,10,10,0,0,,550,50,3,225,,,"GUIDED_POOR, STRIKE, USE_VS_FRIGATES","kinetic6, apex_weapons",,Apex Design Collective,,Anti Shield,Very Fast,Good,,,"Shield hits increase hard flux by %s. Hull or armor hits have a %s chance to arc to weapons or engines, dealing %s EMP damage.",75 | 25% | 175,,,TRUE,1
 Nanoacid Torpedo Launcher,apex_nanoacid_torp_rack,0,,800,1200,,750,,30,30,4,4,,,HIGH_EXPLOSIVE,0,,0,4,1,,0,0,0,0,,500,40,4,350,,,STRIKE,"strike6, rocket2, apex_weapons",,Apex Design Collective,,Torpedo,Fast,None,,,"%s: Hits to hull or armor deal an extra %s damage over %s seconds, ignoring armor damage reduction. The effect temporarily reduces minimum armor value by %s.",Nanoacid Warhead | 750 | 10 | 50%,,,TRUE,1
 Sledgehammer MRM Launcher,apex_sledgehammer_small,1,,800,2500,,2500,,40,30,4,4,,,FRAGMENTATION,,,,1,1,,0,0,0,0,,155,250,22,575,,,DO_NOT_AIM,"missile8, strike3, apex_weapons",,Apex Design Collective,,Finisher,Very Slow,Average,,,,,,,TRUE,1
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 # MISSILE MEDIUM,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-Arcspike Canister Pod,apex_arcspike_canister,2,,1500,1500,,750,1500,20,10,10,6,,,KINETIC,,,,10,,,,,,,,200,200,10,1000,,,"GUIDED_POOR, STRIKE, USE_VS_FRIGATES","kinetic12, apex_weapons",,Apex Design Collective,,Anti Shield,Slow,None,,,"Shield hits increase hard flux by %s. Hull or armor hits have a %s chance to arc to weapons or engines, dealing %s EMP damage.",75 | 25% | 200,,,TRUE,1
+Arcspike Canister Pod,apex_arcspike_canister,2,,1500,1500,,750,1500,20,10,10,6,,,KINETIC,,,,10,,,,,,,,200,200,6,1000,,,"GUIDED_POOR, STRIKE, USE_VS_FRIGATES","kinetic12, apex_weapons",,Apex Design Collective,,Anti Shield,Slow,None,,,"Shield hits increase hard flux by %s. Hull or armor hits have a %s chance to arc to weapons or engines, dealing %s EMP damage.",75 | 25% | 175,,,TRUE,1
 Nanoacid Torpedo Pod,apex_nanoacid_torp_pod,0,,1500,1200,,750,,30,10,10,15,,,HIGH_EXPLOSIVE,0,,0,4,1,,0,0,0,0,,500,40,4,350,,,STRIKE,"strike6, rocket2, apex_weapons",,Apex Design Collective,,Torpedo,Fast,None,,,"%s: Hits to hull or armor deal an extra %s damage over %s seconds, ignoring armor damage reduction. The effect temporarily reduces minimum armor value by %s.",Nanoacid Warhead | 750 | 10 | 50%,,,TRUE,1
 Sledgehammer MRM Pod,apex_sledgehammer_med,1,,1500,2500,,2500,,40,30,10,12,,,FRAGMENTATION,,,,14.5,3,0.25,0,0,0,0,,155,250,22,575,,,DO_NOT_AIM,"missile12, strike9, apex_weapons",,Apex Design Collective,,Finisher,Very Slow,Average,,,,,,,TRUE,1
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 # MISSILE LORGE,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-Arcstorm Canister Pod,apex_arcstorm_canister,3,,5000,2500,,750,1500,20,30,28,10,,,KINETIC,,,,16,,,,,,,,100,100,15,1500,,,GUIDED_POOR,"kinetic12, rare_bp",,Apex Design Collective,,Anti Shield,Slow,None,,,"Shield hits increase hard flux by %s. Hull or armor hits have a %s chance to arc to weapons or engines, dealing %s EMP damage.",75 | 25% | 200,,,TRUE,1
-Arcstorm SRM (dummy weapon for scripting),apex_arcstorm,,,,2500,,125,200,10,,,,,,KINETIC,,,,,,,,,,,,700,50,4,225,,,SYSTEM,,,,,,,,,,,,,,,1
+Arcstorm Canister Pod,apex_arcstorm_canister,3,,5000,2500,,750,1500,20,30,28,10,,,KINETIC,,,,16,,,,,,,,100,100,15,1500,,,GUIDED_POOR,"kinetic12, rare_bp",,Apex Design Collective,,Anti Shield,Slow,None,,,"Shield hits increase hard flux by %s. Hull or armor hits have a %s chance to arc to weapons or engines, dealing %s EMP damage.",75 | 25% | 175,,,TRUE,1
+Arcstorm SRM (dummy weapon for scripting),apex_arcstorm,,,,2500,,110,175,10,,,,,,KINETIC,,,,,,,,,,,,550,50,5.5,225,,,SYSTEM,,,,,,,,,,,,,,,1
 Nanoacid Torpedo Repeater,apex_nanoacid_torp_barrage,1,,4000,1200,,750,,30,10,25,36,,,HIGH_EXPLOSIVE,,,,4.8,3,0.15,0,0,0,0,,500,40,4,350,,,STRIKE,"strike16, rocket14, apex_weapons",,Apex Design Collective,,Torpedo,Fast,None,,,"%s: Hits to hull or armor deal an extra %s damage over %s seconds, ignoring armor damage reduction. The effect temporarily reduces minimum armor value by %s.",Nanoacid Warhead | 750 | 10 | 50%,,,TRUE,1
 Sledgehammer Cluster Launcher,apex_sledgehammer_large,2,,4500,2500,,2500,,40,10,30,56,,,FRAGMENTATION,,,,20.5,7,0.25,0,0,0,0,,155,250,22,575,,,DO_NOT_AIM,"missile18, strike14, rare_bp",,Apex Design Collective,,Finisher,Very Slow,Average,,,,,,,TRUE,1
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
